[gd_scene load_steps=11 format=3 uid="uid://ddd7h7noxy8qo"]

[ext_resource type="Theme" uid="uid://b177n7wrjbcw5" path="res://Themes/Kong_theme.tres" id="1_hsi7t"]
[ext_resource type="Script" uid="uid://b11mixju3t7b2" path="res://Menus/start_menu.gd" id="1_x8oth"]
[ext_resource type="Texture2D" uid="uid://becyc8y3ekfyo" path="res://splash_art/menu art/jungle.jpg" id="2_xgchj"]
[ext_resource type="FontFile" uid="uid://cf1ukv41uov1k" path="res://Font/Jumpman.ttf" id="3_h66ku"]
[ext_resource type="Texture2D" uid="uid://cldnouvrdno15" path="res://sprite/banana_medals/easy_fixed.png" id="3_qyhmc"]
[ext_resource type="AudioStream" uid="uid://cctkkk3e4twxd" path="res://sounds/music/start_menu.mp3" id="4_h66ku"]
[ext_resource type="Texture2D" uid="uid://brgtv3ih6ghnw" path="res://sprite/banana_medals/easy_endurance.png" id="4_qyhmc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dlvif"]

[sub_resource type="Theme" id="Theme_hsi7t"]
Label/colors/font_color = Color(0.699223, 0, 0, 1)
Label/colors/font_outline_color = Color(0.8341, 0.781064, 2.31028e-06, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 0)
Label/constants/outline_size = 4
Label/font_sizes/font_size = 17
Label/fonts/font = null
Label/styles/normal = SubResource("StyleBoxTexture_dlvif")

[sub_resource type="Theme" id="Theme_1g2q2"]
Label/colors/font_color = Color(0.699223, 0, 0, 1)
Label/colors/font_outline_color = Color(0.8341, 0.781064, 2.31028e-06, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 0)
Label/constants/outline_size = 4
Label/font_sizes/font_size = 17
Label/fonts/font = null
Label/styles/normal = SubResource("StyleBoxTexture_dlvif")

[node name="StartMenu" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hsi7t")
script = ExtResource("1_x8oth")
metadata/_edit_horizontal_guides_ = [47.0]

[node name="best_clear_fixed" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="medal_fixed" type="Sprite2D" parent="best_clear_fixed"]
position = Vector2(118.168, 392.583)
scale = Vector2(0.0566173, 0.0566173)
texture = ExtResource("3_qyhmc")

[node name="best_clear_label" type="Label" parent="best_clear_fixed"]
offset_left = 77.1684
offset_top = 395.583
offset_right = 126.168
offset_bottom = 417.583
theme = ExtResource("1_hsi7t")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "Easy"
horizontal_alignment = 1

[node name="best_clear_endure" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="medal_fixed" type="Sprite2D" parent="best_clear_endure"]
position = Vector2(114.168, 567.583)
scale = Vector2(0.0574949, 0.0574948)
texture = ExtResource("4_qyhmc")

[node name="best_clear_label" type="Label" parent="best_clear_endure"]
offset_left = 74.1684
offset_top = 570.583
offset_right = 118.168
offset_bottom = 591.583
theme = ExtResource("1_hsi7t")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 15
text = "Easy"
horizontal_alignment = 1

[node name="best_clear" type="Node" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_xgchj")
metadata/_edit_lock_ = true

[node name="MainMenu" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 2

[node name="Label" type="Label" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_hsi7t")
theme_override_fonts/font = ExtResource("3_h66ku")
theme_override_font_sizes/font_size = 80
text = "Kremling
Blast:"
horizontal_alignment = 1

[node name="Seperator" type="Control" parent="MainMenu/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="StartGameButton" type="Button" parent="MainMenu/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h66ku")
theme_override_font_sizes/font_size = 40
text = "New Game"

[node name="LoadGameButton" type="Button" parent="MainMenu/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h66ku")
theme_override_font_sizes/font_size = 40
text = "Resume Game"

[node name="LevelSelectButton" type="Button" parent="MainMenu/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h66ku")
theme_override_font_sizes/font_size = 40
text = "Level Select"

[node name="ChaosGameButton" type="Button" parent="MainMenu/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h66ku")
theme_override_font_sizes/font_size = 40
text = "Chaos Mode"

[node name="OptionsButton" type="Button" parent="MainMenu/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h66ku")
theme_override_font_sizes/font_size = 40
text = "Options"

[node name="QuitButton" type="Button" parent="MainMenu/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_h66ku")
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="high_score_label" type="Label" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1g2q2")
theme_override_fonts/font = ExtResource("3_h66ku")
theme_override_font_sizes/font_size = 39
text = "High Score: x"
horizontal_alignment = 1

[node name="endless_score_label" type="Label" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1g2q2")
theme_override_fonts/font = ExtResource("3_h66ku")
theme_override_font_sizes/font_size = 39
text = "Chaos Score: x"
horizontal_alignment = 1

[node name="music_player" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_h66ku")
volume_db = -5.0
bus = &"Music"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CreditsButton" type="Button" parent="CanvasLayer"]
offset_left = 1037.0
offset_top = 603.0
offset_right = 1140.0
offset_bottom = 643.0
theme = ExtResource("1_hsi7t")
theme_override_font_sizes/font_size = 30
text = "Credits"

[connection signal="pressed" from="CanvasLayer/CreditsButton" to="." method="_on_credits_button_pressed"]
